--- a/requirements.txt
+++ b/requirements.txt
@@ -15,17 +15,22 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.26.2
 orjson==3.9.10
+pandas==2.1.3
 Pillow==10.1.0
 pydantic==2.5.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.1.0
 pydantic_core==2.14.5
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
+pytz==2023.3.post1
 PyYAML==6.0.1
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
+tzdata==2023.3
 ujson==5.8.0
 uvicorn==0.24.0.post1
 uvloop==0.19.0
